WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58667
[GTK] editing/selection/select-out-of-editable.html failing after
r83967
https://bugs.webkit.org/show_bug.cgi?id=58667
Summary
[GTK] editing/selection/select-out-of-editable.html failing after r83967
Sergio Villar Senin
Reported
2011-04-15 08:38:53 PDT
The diff: --- /home/slave/webkitgtk/gtk-linux-32-debug/build/layout-test-results/editing/selection/select-out-of-editable-expected.txt 2011-04-15 07:06:09.978467441 -0700 +++ /home/slave/webkitgtk/gtk-linux-32-debug/build/layout-test-results/editing/selection/select-out-of-editable-actual.txt 2011-04-15 07:06:09.959742392 -0700 @@ -1,4 +1,4 @@ hello world -Dragging to the left: PASS -Dragging to the left: PASS +Dragging to the left: FAIL - expected 0 but got 7 +Dragging to the left: FAIL - expected 11 but got 10 I'll skip it for the moment.
Attachments
Patch
(2.91 KB, patch)
2011-04-20 14:04 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Updated patch with improved ChangeLog
(3.25 KB, patch)
2011-04-27 00:45 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2011-04-15 08:45:26 PDT
Committed
r83979
: <
http://trac.webkit.org/changeset/83979
>
Martin Robinson
Comment 2
2011-04-20 14:02:58 PDT
The issue here seems to be that triggering another mouseDown event while the mouse button is already down can interfere with drags in Xvfb.
Martin Robinson
Comment 3
2011-04-20 14:04:05 PDT
Created
attachment 90406
[details]
Patch
Xan Lopez
Comment 4
2011-04-26 12:02:43 PDT
Comment on
attachment 90406
[details]
Patch We need to check that the button we are getting now is the same one that was already pressed.
Martin Robinson
Comment 5
2011-04-27 00:45:58 PDT
Created
attachment 91249
[details]
Updated patch with improved ChangeLog
Martin Robinson
Comment 6
2011-04-27 00:46:56 PDT
(In reply to
comment #4
)
> (From update of
attachment 90406
[details]
) > We need to check that the button we are getting now is the same one that was already pressed.
Thanks for the review. I've updated the patch to allow consecutive mouse down events from different buttons and verified that it passes Daniel's test for this issue.(In reply to
comment #0
)
> The diff: > > --- /home/slave/webkitgtk/gtk-linux-32-debug/build/layout-test-results/editing/selection/select-out-of-editable-expected.txt 2011-04-15 07:06:09.978467441 -0700 > +++ /home/slave/webkitgtk/gtk-linux-32-debug/build/layout-test-results/editing/selection/select-out-of-editable-actual.txt 2011-04-15 07:06:09.959742392 -0700 > @@ -1,4 +1,4 @@ > hello world > -Dragging to the left: PASS > -Dragging to the left: PASS > +Dragging to the left: FAIL - expected 0 but got 7 > +Dragging to the left: FAIL - expected 11 but got 10 > > I'll skip it for the moment.
Eric Seidel (no email)
Comment 7
2011-05-01 14:52:29 PDT
Comment on
attachment 91249
[details]
Updated patch with improved ChangeLog View in context:
https://bugs.webkit.org/attachment.cgi?id=91249&action=review
> Tools/DumpRenderTree/gtk/EventSender.cpp:65 > +static unsigned int buttonCurrentlyDown;
unsigned is all you need, not "int".
Martin Robinson
Comment 8
2011-05-02 09:23:15 PDT
Comment on
attachment 91249
[details]
Updated patch with improved ChangeLog Clearing flags on attachment: 91249 Committed
r85481
: <
http://trac.webkit.org/changeset/85481
>
Martin Robinson
Comment 9
2011-05-02 09:23:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug